--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ CLOUDINARY_SECRET_KEY='5MTTHJZ002cfxHSECrnTkrABNRQ'
 ADMIN_EMAIL='admin@tutorly.com'
 ADMIN_PASSWORD='VANEE04#'
 JWT_SECRET="helloguys"
+RAZORPAY_KEY_ID='rzp_test_1wqgSDY7Tnl7pH'
+RAZORPAY_KEY_SECRET='ZOAPRiWOdV8S8MflTcAPsUg5'
