Add chat and video call support, mobile responsive updates

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,4 @@ ADMIN_PASSWORD='VANEE04#'
 JWT_SECRET="helloguys"
 RAZORPAY_KEY_ID='rzp_test_1wqgSDY7Tnl7pH'
 RAZORPAY_KEY_SECRET='ZOAPRiWOdV8S8MflTcAPsUg5'
+CURRENCY='INR'
