--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
