--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,6 @@
+
 VITE_BACKEND_URL='https://tutorly-backend.onrender.com'
+
+# VITE_BACKEND_URL='http://localhost:4000'
+VITE_RAZORPAY_KEY_ID='rzp_test_1wqgSDY7Tnl7pH'
+
